<resources>
    <string name="app_name">Widget for Trello™</string>

    <!-- config activity -->
    <string name="title_activity_config">Choose List</string>
    <string name="board">Board</string>
    <string name="list">List</string>
    <string name="loading_message">Wait a second…</string>

    <!-- card activity -->
    <string name="title_activity_card">Card Details</string>

    <!-- add card activity -->
    <string name="add_card_dialog_title">Add a new card</string>
    <string name="add_card_board_name">Board / List</string>
    <string name="add_card_title_hint">Title</string>
    <string name="add_end">At end</string>
    <string name="add_top">At top</string>
    <string name="add_card_close_hint">Close</string>
    <string name="add_card_success">Added</string>
    <string name="add_card_permission_failure">Card failed to add.\nPlease try logging out and logging in again.</string>
    <string name="add_card_failure">Card failed to add.</string>
    <string name="add_card_parse_failure">Card added, but an unexpected response was received from the server.</string>
    <string name="add_card_add_multiples">Multiples</string>
    <string name="add_card_and_open">And open</string>
    <string name="add_card_relogin_required_title">Re-login needed</string>
    <string name="add_card_relogin_required_details">To add a card, your Trello session must be updated with write permissions.  You will be redirected to the login page to confirm the new permissions.</string>

    <!-- move card activity -->
    <string name="move_this_card">Move this card</string>
    <string name="move_card_dialog_title">Move Card</string>
    <string name="move_card_card_name">Card name</string>
    <string name="move_card_top_button">To top</string>
    <string name="move_card_up_button">Shift up</string>
    <string name="move_card_list_button">To list…</string>
    <string name="move_card_down_button">Shift down</string>
    <string name="move_card_buttom_button">To Bottom</string>
    <string name="move_card_permission_failure">Card failed to move.\nPlease try logging out and logging in again.</string>
    <string name="move_card_failure">Card failed to move.</string>
    <string name="move_card_success">Moved</string>

    <!-- widget -->
    <string name="board_hint">Board name</string>
    <string name="list_hint">List name</string>
    <string name="no_cards">No more cards!</string>
    <string name="refresh">Refresh list cards</string>
    <string name="config">Change widgets list</string>
    <string name="add">Add a new card</string>

    <string name="card_title">Card title</string>

    <string name="card_subscribed_desc">You are subscribed to this card</string>
    <string name="card_desc_desc">Card has description</string>
    <string name="comments_desc">Comments</string>
    <string name="votes_desc">Votes</string>
    <string name="attachments_desc">Attachments</string>
    <string name="checklist_desc">Checklist items</string>
    <string name="due_date_desc">Due date</string>
    <string name="zero">0</string>

    <!-- login frags -->
    <string name="hello_world">Hello!\nTo begin, please sign in to your Trello account.</string>
    <string name="login">Lets go</string>
    <string name="singed">Signed in as %s</string>
    <string name="logout">Logout</string>

    <!-- color pref -->
    <string name="pref_title_copy_from_card">Copy from %s</string>

    <!-- error -->
    <string name="http_fail">Trello http request failed: %s</string>
    <string name="login_fail">Login failed multiple times. Logging you out: %s</string>
    <string name="board_load_fail">Could not load board data.\nPlease make sure you are logged in and try again.\n\nError was: %s</string>
    <string name="move_card_list_selection_prompt">Destination list</string>



</resources>
