<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             tools:context="com.github.oryanmat.trellowidget.activity.AddCardActivity">

    <LinearLayout
            android:id="@+id/linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/add_card_dialog_title"
                        android:id="@+id/add_card_dialog_title"
                        style="@style/Base.DialogWindowTitle.AppCompat"
                        android:layout_weight="1"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_card_board_name"
                        android:id="@+id/add_card_board_name"/>
            </LinearLayout>

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addCloseButton"
                    android:src="@drawable/ic_close_black_24dp"
                    android:tint="?android:colorForeground"
                    android:layout_gravity="top|right"
                    android:contentDescription="@string/add_card_close_hint"/>

        </LinearLayout>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_card_title"
                android:imeOptions="actionNone"
                android:inputType="textCapSentences"
                android:hint="@string/add_card_title_hint"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right">

            <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_card_and_open"
                    android:id="@+id/openAfterAdd"
                    android:layout_weight="0"/>

            <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_card_add_multiples"
                    android:id="@+id/addMultiples"
                    android:layout_weight="0"/>
        </LinearLayout>

        <LinearLayout
                style="?android:buttonBarStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_end"
                    android:drawableLeft="@drawable/ic_vertical_align_bottom_black_24dp"
                    android:id="@+id/bottomButton"
                    style="?android:buttonBarButtonStyle"
                    android:layout_weight="1"
                    android:layout_gravity="left|center_vertical"/>

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_top"
                    android:drawableLeft="@drawable/ic_vertical_align_top_black_24dp"
                    android:id="@+id/topButton"
                    style="?android:buttonBarButtonStyle"
                    android:layout_weight="1"
                    android:layout_gravity="left|center_vertical"/>

        </LinearLayout>
    </LinearLayout>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_card_progress" tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/linear"
            app:layout_constraintTop_toTopOf="@+id/linear" app:layout_constraintLeft_toLeftOf="@+id/linear"
            app:layout_constraintRight_toRightOf="@+id/linear"/>

</android.support.constraint.ConstraintLayout>
